[package]
name = "rust-logistic"
version = "0.1.0"
authors = ["Oasis Labs<info@oasislabs.com>"]
edition = "2018"

[dependencies]
dpmlrust = { git = "https://github.com/oasislabs/dpml-rs" }
hex = "0.3"
ml-reader = { git = "https://github.com/oasislabs/ml-reader" }
num = { git = "https://github.com/rust-num/num", version = "0.2" }
oasis-std = "0.1"
rand = { version = "0.5" }
rulinalg = { git = "https://github.com/AtheMathmo/rulinalg", version = "0.4" }
rusty-libsvm = { git = "https://github.com/oasislabs/ml-reader" }
rusty-machine = { git = "https://github.com/AtheMathmo/rusty-machine", version = "0.5" }

[lib]
crate-type = ["cdylib"]

[profile.release]
incremental = false
lto = true
opt-level = "z"
panic = "abort"

[package.metadata.oasis]
max-mem = 262144

[patch.crates-io]
oasis-std = { path = "/oasis/Projects/platform/oasis-std" }
