[package]
name = "tvm-basic"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
ndarray = "0.11.2"
owasm-abi = "0.1"
owasm-abi-derive = "0.1"
owasm-ethereum = "0.7"
owasm-std = "0.13"
tvm-runtime = { git = "https://github.com/dmlc/tvm" }

[lib]
crate-type = ["cdylib"]

[profile.release]
incremental = false
lto = true
opt-level = 3
panic = "abort"

[package.metadata.oasis]
max-mem = 2097152
