[package]
name = "tvm-basic"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
ndarray = "0.11"
oasis-std = "0.1"
tvm-runtime = { git = "https://github.com/dmlc/tvm", tag = "v0.5" }

[lib]
crate-type = ["cdylib"]

[profile.release]
incremental = false
lto = true
opt-level = 3
panic = "abort"

[package.metadata.oasis]
max-mem = 2097152

[patch.crates-io]
oasis-std = { path = "/oasis/Projects/platform/oasis-std" }
