[package]
name = "wasm-counter"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
oasis = { git = "https://github.com/oasislabs/oasis-rs", features = ["user-alloc"] }
owasm-abi = "0.1"
owasm-abi-derive = "0.1"
owasm-ethereum = "0.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
