[package]
name = "mantle-counter"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
mantle = { git = "https://github.com/oasislabs/mantle", branch = "armani/test" }
serde = { version = "1.0", features = ["derive"] }
serde_json =  "1.0.40"
