[package]
name = "existing"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
deployed-abi = { path = "../../../../abis/deployed_abi" }
oasis-std = "0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
incremental = false
lto = true
opt-level = "z"
panic = "abort"

[patch.crates-io]
oasis-std = { path = "/oasis/Projects/platform/oasis-std" }
